--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
+    <meta charset="UTF-8" />
+    <title>Modelo AR - Cubo</title>
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    <style>
+      body {
+        margin: 0;
+        overflow: hidden;
+      }
+      model-viewer {
+        width: 100vw;
+        height: 100vh;
+      }
+    </style>
   </head>
   <body>
-    <model-viewer src="cubo.glb" alt="Cubo 3D"
-                  auto-rotate camera-controls ar
-                  style="width: 100%; height: 500px;">
+    <model-viewer
+      src="cubo.glb"
+      ar
+      ar-modes="scene-viewer webxr quick-look"
+      camera-controls
+      auto-rotate
+      alt="Modelo 3D de un cubo">
     </model-viewer>
   </body>
 </html>
