--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Modelo AR - Cubo</title>
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-    <style>
-      body {
-        margin: 0;
-        overflow: hidden;
+<head>
+  <meta charset="UTF-8">
+  <title>Modelo Rojo</title>
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+</head>
+<body>
+  <model-viewer id="modelo" src="cubo.glb" alt="Modelo Rojo"
+                auto-rotate camera-controls
+                style="width: 100%; height: 500px;">
+  </model-viewer>
+
+  <script>
+    async function cambiarColor() {
+      const modelo = document.getElementById('modelo');
+      await modelo.updateComplete;
+      const material = modelo.model.materials.find(mat => mat.name === 'Material_5');
+      if (material) {
+        material.pbrMetallicRoughness.setBaseColorFactor([1.0, 0.0, 0.0, 1.0]); // Rojo
       }
-      model-viewer {
-        width: 100vw;
-        height: 100vh;
-      }
-    </style>
-  </head>
-  <body>
-    <model-viewer
-      src="cubo.glb"
-      ar
-      ar-modes="scene-viewer webxr quick-look"
-      camera-controls
-      auto-rotate
-      alt="Modelo 3D de un cubo">
-    </model-viewer>
-  </body>
+    }
+    cambiarColor();
+  </script>
+</body>
 </html>
+
