--- a/index.html
+++ b/index.html
@@ -4,23 +4,29 @@
   <meta charset="UTF-8">
   <title>Modelo Rojo</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <style>
+    model-viewer {
+      width: 100%;
+      height: 500px;
+      background-color: #f00; /* Fondo rojo */
+    }
+  </style>
 </head>
 <body>
-  <model-viewer id="modelo" src="cubo.glb" alt="Modelo Rojo"
-                auto-rotate camera-controls
-                style="width: 100%; height: 500px;">
+  <model-viewer id="modelo" src="cubo.glb" alt="Modelo 3D"
+                auto-rotate camera-controls shadow-intensity="1" style="width: 100%; height: 500px;">
   </model-viewer>
 
   <script>
-    async function cambiarColor() {
+    document.addEventListener('DOMContentLoaded', () => {
       const modelo = document.getElementById('modelo');
-      await modelo.updateComplete;
-      const material = modelo.model.materials.find(mat => mat.name === 'Material_5');
-      if (material) {
-        material.pbrMetallicRoughness.setBaseColorFactor([1.0, 0.0, 0.0, 1.0]); // Rojo
-      }
-    }
-    cambiarColor();
+      modelo.addEventListener('load', () => {
+        const material = modelo.model.materials[0]; // Accede al primer material
+        if (material) {
+          material.pbrMetallicRoughness.setBaseColorFactor([1.0, 0.0, 0.0, 1.0]); // Rojo
+        }
+      });
+    });
   </script>
 </body>
 </html>
